--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "ng": "nx",
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2020 browser module main",
     "start": "nx serve",
+    "serve:web": "ng serve --port 4300 --open",
+    "serve:api": "json-server apps/server/db.json",
+    "serve:all": "concurrently \"npm run serve:api\" \"npm run serve:web\"",
     "build": "nx build",
     "test": "nx test"
   },
@@ -21,6 +24,8 @@
     "@angular/platform-browser": "~14.1.1",
     "@angular/platform-browser-dynamic": "~14.1.1",
     "@angular/router": "~14.1.1",
+    "@ngrx/store": "^14.3.0",
+    "@ngrx/store-devtools": "^14.3.0",
     "@nrwl/angular": "14.5.10",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
