--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,14 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@villains/api-interfaces": ["libs/api-interfaces/src/index.ts"],
+      "@villains/core-data": ["libs/core-data/src/index.ts"],
+      "@villains/core-state": ["libs/core-state/src/index.ts"],
+      "@villains/environment": ["libs/environment/src/index.ts"],
+      "@villains/material": ["libs/material/src/index.ts"],
+      "@villains/ui-login": ["libs/ui-login/src/index.ts"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
